# ci_template_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  simple_example.cpp  simple_lib.cpp  simple_lib.hpp  simpleexample.cpp  simpleexample.hpp  simpleexample_test.cpp
.github/workflows/: ci.yml  sanitizer.yml
package_test/: meson.build  meson_options.txt  simpleexample_test.cpp
